# bsnake_lane_detection

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lane_detector  lane_detector.cpp  lane_detector.h
extras/: laneDetector.cpp  laneDetector_utils.cpp  laneDetector_utils.h  lane_detector  lane_detector.cpp  lane_detector.h  shadowRemover.h
extras/shadows/: filter.py
extras/test_code/: filter.cpp  lane_detector.cpp
include/: houghP.hpp  laneDetector_utils.hpp
shadows/: filter.py  lane.py
src/: filter  houghP.cpp  laneDetector.cpp  laneDetector_utils.cpp
